made more changes for reservation

--- a/src/main/resources/templates/reservation.html
+++ b/src/main/resources/templates/reservation.html
@@ -55,6 +55,10 @@
                 + *{countPeople} + ' for ' + *{dateTime}
                 + '. Your special request is: '
                 + *{specialRequest}"></th:block>
+            <div class="buttons">
+                <button th:action="@{/index}" class="btn btn-outline-primary px-4">Back</button>
+                <!--                            <button class="btn btn-primary px-4 ms-3">Contact</button>-->
+            </div>
 
         </div>
 <!--        <div class="text-center mt-3">-->
