--- a/src/main/resources/templates/add-reservation.html
+++ b/src/main/resources/templates/add-reservation.html
@@ -28,8 +28,8 @@
                        id="inputName"
                        class="form-control"
                        aria-describedby="inputNameError">
-                <small id="inputNameError"
-                       class="invalid-feedback rounded">Reservation Name length must be more than 3 characters</small>
+                <small id="inputNameError" th:errors="*{name}"
+                       class="invalid-feedback rounded">Reservation name length must be more than 3 characters</small>
             </div>
         </div>
         <div>
@@ -44,7 +44,7 @@
                        id="inputPhoneNumber"
                        class="form-control"
                        aria-describedby="phoneNumberHelpInline">
-                <small id="phoneNumberError"
+                <small id="phoneNumberError" th:errors="*{phoneNumber}"
                        class="invalid-feedback  form-text bg-danger rounded">Must be valid phone number</small>
             </div>
         </div>
@@ -59,10 +59,9 @@
                        type="number"
                        id="inputCountPeople"
                        class="form-control"
-                       min="1" max="65"
                        aria-describedby="countPeopleHelpInline">
                 <small id="countPeopleError"
-                       class="invalid-feedback  form-text bg-danger rounded">Must be valid count</small>
+                       class="invalid-feedback rounded">Must be valid count</small>
             </div>
         </div>
         <div class="form-group">
@@ -76,7 +75,7 @@
                         id="dateTime"
                        aria-describedby="dateTimeHelpInline">
                 <small id="dateTimeHelpInline"
-                       class="invalid-feedback bg-danger text-light rounded">Reservation date and time cannot be in the past</small>
+                       class="invalid-feedback rounded">Reservation date and time cannot be in the past</small>
             </div>
         </div>
         <div>
@@ -91,7 +90,7 @@
                               class="form-control"
                               aria-describedby="inputSpecialRequestError"></textarea>
                 <small id="inputSpecialRequestError"
-                       class="invalid-feedback  form-text bg-danger rounded">SpecialRequest length must be more than 5
+                       class="invalid-feedback rounded">SpecialRequest length must be more than 5
                     characters</small>
             </div>
         </div>
@@ -111,9 +110,10 @@
             <div class="form-group p-3">
                 <label class="p-2" for="categories">Categories:</label>
                 <input th:each="category: ${T(softuni.TheChefRestaurant.TheChefRestaurant.model.entity.enums.CategoryNameEnum).values()}"
+                       th:object="${category}"
                        th:value="${category}"
                        th:text="${category}"
-                       id="categories" class="m-3" type="checkbox"
+                       id="categories" class="m-2" type="checkbox"
                        >
 				<br>
             </div>
