--- a/src/main/resources/templates/your-reservation.html
+++ b/src/main/resources/templates/your-reservation.html
@@ -10,16 +10,26 @@
     <header th:replace="~{fragments/navigation}">
     </header>
 
-    <input type = "hidden" name="reservationId" id="reservationId" th:value="${reservation.id}">>
+    <input type = "hidden" name="reservationId" id="reservationId" >>
     <div class = "your-main" th:object="${reservation}">
         <!--/*@thymesVar id="reservations" type=""*/-->
         <section class="reservation-info text-center">
             <h2 th:text="'Thank you for your reservation,' + ${@loggedUser.username}"> </h2>
-            <p>You have reservation of the name: <span th:text="${reservation.name}" id="name"></span></p>
-            <p>For: <span th:text="${reservation.countPeople}" id="countPeople"></span> people</p>
-            <p>Date and time for your reservation is: <span id="dateTime"></span></p>
-            <p>You prefer <span id="section">section</span></p>
-            <p>For <span id="category">category of your reservation</span></p>
+            <p>You have reservation of the name:
+                <span th:text="${reservation.name}" id="name"></span>
+            </p>
+            <p>For:
+                <span th:text="${reservation.countPeople}" id="countPeople"></span> people
+            </p>
+            <p>Date and time for your reservation is:
+                <span id="dateTime"></span>
+            </p>
+            <p>You prefer
+                <span id="section">section</span>
+            </p>
+            <p>For
+                <span id="category">category of your reservation</span>
+            </p>
         </section>
 
 
