--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,15 +15,15 @@
             <h1>THE CHEF RESTAURANT</h1>
             <p>"След една хубава вечеря, човек може да прости на всеки, дори на собствените си роднини."
                 Оскар Уайлд</p>
-            <th:block th:unless="${@loggedUser.id == null}" >
-            <a th:action="@{/reservations/your/{id} (id= ${@loggedUser.id})}" class="btn">Your Reservation</a>
+            <block >
+            <a class="btn">Your Reservation</a>
             <br></br>
-            </th:block>
-            <th:block th:if="${@loggedUser.id == null}">
+            </block>
+            <block>
             <a href="https://thechef-club.com/%d0%bc%d0%b5%d0%bd%d1%8e/" class="btn">Look our Menu</a>
-            <br></br>
+            </br>
             <a href="https://thechef-club.com/%d0%b2%d0%b8%d0%bd%d0%b5%d0%bd-%d0%bb%d0%b8%d1%81%d1%82/" class="btn">Look our Wine List</a>
-            </th:block>
+            </block>
         </div>
     </section>
 
@@ -32,7 +32,7 @@
         <a href="/" class="main-btn" >
             <div class="box">
                 <img src="/images/dinner.png" height="150px" alt="">
-                <h3>Individual reservation</h3>
+                <h3>Individual reservationEntity</h3>
                 <p>Just want to dinner with friends?</p>
             </div>
         </a>
@@ -60,10 +60,6 @@
         <img src="/images/5.jpg" width="150px" height="250px" alt="">
     </section>
 
-    <h3>You can find us here</h3>
-    <iframe src=" https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2970.3708665674576!2d23.46398987578862!3d41.88488056498997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14ababe97a7e503f%3A0xaaa12b472a57d667!2sThe%20Chef!5e0!3m2!1sbg!2sbg!4v1701796454540!5m2!1sbg!2sbg" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-        
-    </iframe>
 </div>
 <!-- Wrapper Ends -->'
 
