--- a/src/main/resources/templates/add-reservation.html
+++ b/src/main/resources/templates/add-reservation.html
@@ -12,7 +12,7 @@
     <form th:action="@{/reservations/add}"
           th:method="POST"
           th:object="${addReservationBindingModel}"
-          id="add-reservation-form"
+          id="add-reservationEntity-form"
           class="w-50 rounded text-white mt-5"
           enctype="multipart/form-data">
         <h3 class="border-left border-light pl-2">Add a new reservation</h3>
