--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -32,7 +32,7 @@
         <a href="/" class="main-btn" >
             <div class="box">
                 <img src="/images/dinner.png" height="150px" alt="">
-                <h3>Individual reservationEntity</h3>
+                <h3>Individual reservation</h3>
                 <p>Just want to dinner with friends?</p>
             </div>
         </a>
