--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,8 +1,8 @@
 /* CSS Variables */
 :root {
-    --primary: #eee7e7;
-    --dark: #333;
-    --light: #fff;
+    --primary: rgba(234, 171, 14, 0);
+    --dark: rgb(225, 219, 220);
+    --light: #f5f0f0;
     --shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
     --lightGray: rgba(241, 241, 241, 0.8);
 }
@@ -25,7 +25,7 @@ body {
 
 .btn {
     background: var(--dark);
-    color: var(--light);
+    color: #1b1e21;
     padding: 0.6rem 1.3rem;
     text-decoration: none;
     border: 0;
@@ -33,7 +33,7 @@ body {
 
 .main-btn {
     text-decoration: none;
-    color: #231d1e;
+    color: #e3d8da;
 }
 
 .main-btn:hover {
@@ -150,15 +150,15 @@ img {
 }
 
 /* Info */
-.road {
-    background: var(--primary);
-    box-shadow: var(--shadow);
-    display: grid;
-    grid-gap: 30px;
-    grid-template-columns: repeat(2, 1fr);
-    padding: 3rem;
-    grid-row: auto;
-}
+/*.road {*/
+/*    background: var(--primary);*/
+/*    box-shadow: var(--shadow);*/
+/*    display: grid;*/
+/*    grid-gap: 30px;*/
+/*    grid-template-columns: repeat(2, 1fr);*/
+/*    padding: 3rem;*/
+/*    grid-row: auto;*/
+/*}*/
 
 
 /* Portfolio */
