--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -10,11 +10,9 @@
                 <li>
                     <a href="/">Home</a>
                 </li>
-                <!--            <li th:unless="${@loggedUser.isLogged()}">-->
                 <a href="/users/login">Login</a>
                 </li>
-                <!--            <li th:unless="${@loggedUser.isLogged()}">-->
-                <a href="/users/registe}">Register</a>
+                <a href="/users/register">Register</a>
                 </li>
                 <li>
                     <a href="/about">About</a>
@@ -25,16 +23,12 @@
                     <a href="/reservations/add">Add new reservation</a>
                 </li>
                 <li>
-                    <a href="/users/profile/{id}">Profile</a>
+                    <a href="/">Profile</a>
                 </li>
                 <li>
                     <a href="/">Admin</a>
                 </li>
-                <!--            <li th:if="${@loggedUser.isLogged()}">-->
-                <!--                    <form th:action="@{users/logout}" method="POST">-->
-                <!--                        <input type="submit" value="LOGOUT"/>-->
-                <!--                    </form>-->
-                <a th:href="@{/users/logout}">Logout</a>
+                <a href="/users/logout">Logout</a>
                 <!--            </li>-->
 <!--                <li>-->
 <!--                                    <th:block th:text = "${@loggedUser.username} == null ? 'no user' : 'Welcome, ' + ${@loggedUser.username}"></th:block>-->
