--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,6 +1,7 @@
 
 <html lang="en"
-      xmlns:th="http://www.thymeleaf.org">
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head th:replace="~{fragments/head}">
 </head>
@@ -15,15 +16,15 @@
             <h1>THE CHEF RESTAURANT</h1>
             <p>"След една хубава вечеря, човек може да прости на всеки, дори на собствените си роднини."
                 Оскар Уайлд</p>
-            <block >
+            <th:block sec:authorize="isAuthenticated()">
             <a class="btn">Your Reservation</a>
             <br></br>
-            </block>
-            <block>
+            </th:block>
+            <th:block sec:authorize="!isAuthenticated()">
             <a href="https://thechef-club.com/%d0%bc%d0%b5%d0%bd%d1%8e/" class="btn">Look our Menu</a>
             </br>
             <a href="https://thechef-club.com/%d0%b2%d0%b8%d0%bd%d0%b5%d0%bd-%d0%bb%d0%b8%d1%81%d1%82/" class="btn">Look our Wine List</a>
-            </block>
+            </th:block>
         </div>
     </section>
 
@@ -45,7 +46,7 @@
         </a>
         <a href="/" class="main-btn" >
             <div class="box">
-                <img src="/images/celebration1.png" height="150px" alt="">
+                <img src="/images/celebration_new.jpg" height="150px" alt="">
                 <h3>Celebration</h3>
                 <p>When you have an occasion to celebrate</p>
             </div>
