--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -18,15 +18,17 @@
                     <div class="col-auto">
                         <input type="text"
                                name="username"
+                               th:value="${username}"
                                required
                                id="username"
                                class="form-control"
-                               aria-describedby="usernameHelpInline">
+                               placeholder="Username"/>
                     </div>
-                    <small class="invalid-feedback">
-                        <span class="bg-danger"> Username is not correct </span>
-                    </small>
+<!--                    <small class="invalid-feedback">-->
+<!--                        <span class="bg-danger"> Username is not correct </span>-->
+<!--                    </small>-->
                 </div>
+
                 <div>
                     <div class="col-auto">
                         <label for="password" class="col-form-label ">Password</label>
@@ -36,15 +38,19 @@
                                name="password"
                                required
                                id="password" class="form-control"
-                               aria-describedby="passwordHelpInline">
+                               placeholder="Password"/>
                     </div>
+
+                    <p th:if="${bad_credentials}" class="errors alert alert-danger">
+                        Invalid username or password.
+                    </p>
+
                 </div>
                 <div class="d-flex justify-content-center mt-2">
                     <button class="btn btn-primary btn-block w-50" type="submit">Login</button>
                 </div>
             </form>
         </div>
-
     </div>
 </main>
 <footer th:replace="~{fragments/footer}">
