--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -23,15 +23,26 @@
                     <a href="/reservations/add">Add new reservation</a>
                 </li>
                 <li>
-                    <a href="/">Profile</a>
+                    <a href="/profile">Profile</a>
                 </li>
                 <li>
                     <a href="/">Admin</a>
                 </li>
-                <a href="/users/logout">Logout</a>
-                <li>
-                    <div class="logged-user">
-                        Welcome, <th:block sec:authentication="name"></th:block>!
+<!--                <li>-->
+<!--                    <a th:method="post" th:action="@{/users/logout}">Logout</a>-->
+<!--                </li>-->
+<!--                    <div class="logged-user">-->
+<!--                        Welcome, <th:block sec:authentication="name"></th:block>!-->
+<!--                    </div>-->
+                <li class="nav-item" sec:authorize="isAuthenticated()">
+                    <div class="form-inline my-2 my-lg-0 border px-3">
+                        <div class="logged-user">
+                            Welcome, <th:block sec:authentication="name"></th:block>!
+                        </div>
+                        <form th:method="post"
+                              th:action="@{/users/logout}">
+                            <input type="submit" class="btn btn-link" value="Logout"/>
+                        </form>
                     </div>
                 </li>
             </th:block>
