implement category fields

--- a/src/main/resources/templates/individual.html
+++ b/src/main/resources/templates/individual.html
@@ -9,7 +9,7 @@
     <header th:replace="~{fragments/navigation}">
 </header>
 
-    <section  th:action="@{/individual}" th:method="post" class="ui-autocomplete-category">
+    <section class="ui-autocomplete-category">
         <div>
             <h2>Title</h2>
             <p>Very long description</p>
