--- a/src/main/resources/templates/cocktail.html
+++ b/src/main/resources/templates/cocktail.html
@@ -9,7 +9,7 @@
     <header th:replace="~{fragments/navigation}">
 </header>
 
-    <section class="road">
+    <section class="ui-autocomplete-category">
         <div>
             <h2>Title</h2>
             <p>Very long description</p>
