--- a/src/main/resources/templates/contact-us.html
+++ b/src/main/resources/templates/contact-us.html
@@ -16,7 +16,7 @@
       <div class="contact-info">
           <li>
               <h4>Address</h4>
-              <span class="recycling"><img src="/images/address3.webp" height="50px" width="50"
+              <span class="anim"><img src="/images/address3.webp" height="50px" width="50"
                                            alt="Img"></span>
               <p>Bulgaria</p>
               <p>2760 Razlog</p>
@@ -26,21 +26,21 @@
 
           <li>
               <h4>Phone</h4>
-              <span class="recycling"><img class="recycling"
+              <span class="anim"><img class="recycling"
                                            src="/images/phone5.webp" height="50px" width="50" alt="Img"></span>
               <p>+359 887 369 294</p>
               <p>+359 877 111 666</p>
           </li>
           <li>
               <h4>Email</h4>
-              <span class="recycling"><img class="recycling"
+              <span class="anim"><img class="recycling"
                                            src="/images/email2.webp" height="50px" width="50"
                                            alt="Img"></span>
               <p>thechefclub22@gmail.com</p>
           </li>
           <li>
               <h4>Working time</h4>
-              <span class="recycling"><img class="recycling"
+              <span class="anim"><img class="recycling"
                                            src="/images/workingTime.png" height="50px" width="50"
                                            alt="Img"></span>
               <p>Monday - Saturday</p>
