--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -29,21 +29,21 @@
     </section>
     <!-- Boxes Section -->
     <section class="boxes">
-        <a href="/" class="main-btn" >
+        <a href="/individual" class="main-btn" >
             <div class="box">
                 <img src="/images/dinner.png" height="150px" alt="">
                 <h3>Individual reservation</h3>
                 <p>Just want to dinner with friends?</p>
             </div>
         </a>
-        <a href="/" class="main-btn" >
+        <a href="/cocktail" class="main-btn" >
             <div class="box">
                 <img src="/images/cocktail1.png" height="150px" alt="">
                 <h3>Cocktail</h3>
                 <p>Do you need a cocktail party?</p>
             </div>
         </a>
-        <a href="/" class="main-btn" >
+        <a href="/celebrate" class="main-btn" >
             <div class="box">
                 <img src="/images/celebration_new.jpg" height="150px" alt="">
                 <h3>Celebration</h3>
