--- a/src/main/resources/templates/celebrate.html
+++ b/src/main/resources/templates/celebrate.html
@@ -34,9 +34,9 @@
             <a href="/reservations/add" class="btn">Book now</a>
         </div><br>
          <section class="gallery">
-             <img src="/images/celebrating.jpg" width="400px" height="350px" alt="">
-             <img src="/images/abiturient.jpg" width="400px" height="350px" alt="">
-             <img src="/images/krashtene.jpg" width="400px" height="350px" alt="">
+             <img src="/images/celebrating.jpg" height="300px" alt="">
+             <img src="/images/abiturient.jpg" height="300px" alt="">
+             <img src="/images/krashtene.jpg" height="300px" alt="">
          </section>
     </section>
 </div>
