--- a/src/main/resources/templates/individual.html
+++ b/src/main/resources/templates/individual.html
@@ -22,9 +22,9 @@
             <a href="/reservations/add" class="btn">Book now</a>
         </div><br>
         <section class="gallery">
-            <img src="/images/menu1.jpg" width="400px" height="300px" alt="">
-            <img src="/images/dinner3.jpg" width="400px" height="300px" alt="">
-            <img src="/images/chicken.jpg" width="400px" height="300px" alt="">
+            <img src="/images/menu1.jpg" height="300px" alt="">
+            <img src="/images/dinner3.jpg" height="300px" alt="">
+            <img src="/images/chicken.jpg"  height="300px" alt="">
         </section>
 
     </section>
