--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -34,16 +34,14 @@
 <!--                    <div class="logged-user">-->
 <!--                        Welcome, <th:block sec:authentication="name"></th:block>!-->
 <!--                    </div>-->
-                <li class="nav-item" sec:authorize="isAuthenticated()">
-                    <div class="form-inline my-2 my-lg-0 border px-3">
-                        <div class="logged-user">
-                            Welcome, <th:block sec:authentication="name"></th:block>!
+                <li class="nav-item" sec:authorize="isAuthenticated()" >
+                        <div class="logged-user" >
+                            Welcome, <th:block th:field="*{name}"></th:block>!
                         </div>
                         <form th:method="post"
                               th:action="@{/users/logout}">
                             <input type="submit" class="btn btn-link" value="Logout"/>
                         </form>
-                    </div>
                 </li>
             </th:block>
 
