--- a/src/main/resources/templates/your-reservation.html
+++ b/src/main/resources/templates/your-reservation.html
@@ -10,64 +10,101 @@
     <header th:replace="~{fragments/navigation}">
     </header>
 
-    <main class="p-5 align-content-center bg-blur my-register-div">
-        <div class="container mt-5">
-            <div class="row d-flex justify-content-center">
-                <div class="col-md-7">
-                    <div class="reservation-info p-3 py-4">
-                        <div class="text-center"><img src="/images/logo.jpg" width="100" class="rounded-circle"></div>
-                        <div class="text-center mt-3">
-                        <span th:text="${reservationViewModel.author}"
-                              class="bg-secondary p-1 px-4 rounded text-white">, thank you for your reservation!</span>
-                            <h5 class="mt-4 mb-0">You have reservation of name</h5>
-                            <span th:text="${reservation.name}"></span>
-                            <h5 class="mt-2 mb-0">For</h5>
-                            <span th:text="${reservation.countPeople}">people</span>
-                            <h5 class="mt-2 mb-0">You want to be in</h5>
-                            <span th:text="${reservation.section}">area</span>
-                            <div class="px-4 mt-5">
-                                <p class="fonts">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim et nostrum
-                                    optio perferendis quam quod ratione rem sit soluta ut! A dolor laborum, maiores neque
-                                    nesciunt quis rerum sunt suscipit. </p>
-                            </div>
-                            <div class="buttons">
-                                <a th:href="@{/}"
-                                   th:text="Back"
-                                   class="btn btn-outline-primary px-4">
-                                </a>
-                            </div>
-                        </div>
+<!--    <main class="p-5 align-content-center bg-blur my-register-div">-->
+<!--        <div class="container mt-5">-->
+<!--            <div class="row d-flex justify-content-center">-->
+<!--                <div class="col-md-7">-->
+<!--                    <div class="reservation-info p-3 py-4">-->
+<!--                        <div class="text-center"><img src="/images/logo.jpg" width="100" class="rounded-circle"></div>-->
+<!--                        <div class="text-center mt-3">-->
+<!--                        <span th:text="${reservationViewModel.author}"-->
+<!--                              class="bg-secondary p-1 px-4 rounded text-white">, thank you for your reservation!</span>-->
+<!--                            <h5 class="mt-4 mb-0">You have reservation of name</h5>-->
+<!--                            <span th:text="${reservation.name}"></span>-->
+<!--                            <h5 class="mt-2 mb-0">For</h5>-->
+<!--                            <span th:text="${reservation.countPeople}">people</span>-->
+<!--                            <h5 class="mt-2 mb-0">You want to be in</h5>-->
+<!--                            <span th:text="${reservation.section}">area</span>-->
+<!--                            <div class="px-4 mt-5">-->
+<!--                                <p class="fonts">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim et nostrum-->
+<!--                                    optio perferendis quam quod ratione rem sit soluta ut! A dolor laborum, maiores neque-->
+<!--                                    nesciunt quis rerum sunt suscipit. </p>-->
+<!--                            </div>-->
+<!--                            <div class="buttons">-->
+<!--                                <a th:href="@{/}"-->
+<!--                                   th:text="Back"-->
+<!--                                   class="btn btn-outline-primary px-4">-->
+<!--                                </a>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </main>-->
+
+    <input type = "hidden" name="reservationId" id="reservationId" th:value="${reservation.id}">
+
+    <div class = "your-main" th:object="${reservation}">
+        <!--/*@thymesVar id="reservations" type=""*/-->
+        <section class="reservationEntity-info text-center">
+            <h2 th:text="'Thank you for your reservation,' "> </h2>
+            <p>You have reservation of the name:
+                <span th:text="*{name}" id="name"></span>
+            </p>
+            <p>For:
+                <span th:text="*{countPeople}" id="countPeople"></span> people
+            </p>
+            <p>Date and time for your reservation is:
+                <span id="dateTime"></span>
+            </p>
+            <p>You prefer
+                <span id="section">section</span>
+            </p>
+            <p>For
+                <span id="category">category of your reservation</span>
+            </p>
+        </section>
+
+        <section class="comments">
+            <h1>Comments</h1>
+            <div>
+                <!-- Comments submission -->
+                <form id="commentForm" method="POST"
+                      th:action="@{/api/{reservationId}/comments(reservationId=${reservation.id})}">
+                    <div class="form-group">
+                        <h4>Leave a comment</h4>
+                        <label for="textContent">TextContent</label>
+                        <textarea name="textContent"
+                                  id="textContent"
+                                  cols="30"
+                                  rows="5"
+                                  class="form-control"
+                                  style="background-color: white;"></textarea>
+                        <small id="messageError" class="invalid-feedback">
+                            Text comment should be at least 10 characters.
+                        </small>
                     </div>
-                </div>
+
+                    <div class="form-group">
+                        <input type="submit"
+                               class="btn"
+                               id="postComment"
+                               value="Post Comment"/>
+                    </div>
+                </form>
+                <!-- Comments submission -->
             </div>
-        </div>
-    </main>
-
-<!--    <input type = "hidden" name="reservationId" id="reservationId" >>-->
-<!--    <div class = "your-main" th:object="${reservationEntity}">-->
-<!--        &lt;!&ndash;/*@thymesVar id="reservations" type=""*/&ndash;&gt;-->
-<!--        <section class="reservationEntity-info text-center">-->
-<!--            <h2 th:text="'Thank you for your reservationEntity,' + {use}"> </h2>-->
-<!--            <p>You have reservationEntity of the name:-->
-<!--                <span th:text="${reservationEntity.name}" id="name"></span>-->
-<!--            </p>-->
-<!--            <p>For:-->
-<!--                <span th:text="${reservationEntity.countPeople}" id="countPeople"></span> people-->
-<!--            </p>-->
-<!--            <p>Date and time for your reservationEntity is:-->
-<!--                <span id="dateTime"></span>-->
-<!--            </p>-->
-<!--            <p>You prefer-->
-<!--                <span id="section">section</span>-->
-<!--            </p>-->
-<!--            <p>For-->
-<!--                <span id="category">category of your reservationEntity</span>-->
-<!--            </p>-->
-<!--        </section>-->
-
-
-
-<!--    </div>-->
+            <!-- All comments section -->
+            <div>
+                <span id="commentCtnr"><!-- Comments section, filled in by script --></span>
+            </div>
+            <!-- EO: All comments section -->
+        </section>
+    </div>
+    <script th:src="@{/js/comments.js}"></script>
+</div>
+    </div>
 
 <!--    <section th:object="${reservationEntity}" th:action="@{/reservations/your/{id}}" class="reservationEntity-info">-->
 <!--        <img src="/images/logo.jpg" alt="Title image">-->
