--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -199,6 +199,23 @@ footer {
     text-align: center;
     padding: 1rem;
 }
+.logout-btn{
+    background: var(--primary);
+    display: block;
+    text-decoration: none;
+    padding: 0.8rem;
+    text-align: center;
+    color: var(--dark);
+    text-transform: uppercase;
+    font-size: 1.1rem;
+    box-shadow: var(--shadow);
+    width: 100%;
+    height: auto;
+}
+.logout-btn:hover{
+    background: #f5f0f0;
+    color: darkred;
+}
 
 /* About */
 .info {
