--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -216,6 +216,9 @@ footer {
     background: #f5f0f0;
     color: darkred;
 }
+.comments{
+    background-color: transparent !important;
+}
 
 /* About */
 .info {
@@ -281,21 +284,27 @@ footer {
     background-color: var(--lightGray);
     padding: 20px;
     border-radius: 10px;
-    margin-left: 40%;
+    margin-left: 10px;
     margin-top: 10%;
+
 
 }
 
 .reservation-info {
-    position: fixed;
+    position: relative;
     grid-column: 1;
-    grid-row: 1/3;
+    grid-row: auto;
     color: #000;!important;
+    text-align: left;
 }
 
 .reservation-specialRequest {
     grid-column: 2/4;
     grid-row: 2;
+}
+.reservationEntity-info span{
+    font-weight: bold;
+    font-family: Helvetica;
 }
 
 .comments {
