--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -17,7 +17,7 @@
             <p class="anim">"След една хубава вечеря, човек може да прости на всеки, дори на собствените си роднини."
                 Оскар Уайлд</p>
             <th:block sec:authorize="!isAuthenticated()">
-                <a href="/reservations/all" class="btn">Your reservations</a>
+<!--                <a href="/reservations/all" class="btn">Your reservations</a>-->
             <a href="https://thechef-club.com/%d0%bc%d0%b5%d0%bd%d1%8e/" class="btn anim">Look our Menu</a>
             </br>
             <a href="https://thechef-club.com/%d0%b2%d0%b8%d0%bd%d0%b5%d0%bd-%d0%bb%d0%b8%d1%81%d1%82/" class="btn anim">Look our Wine List</a>
