add comment js file

--- a/src/main/resources/templates/celebrate.html
+++ b/src/main/resources/templates/celebrate.html
@@ -35,7 +35,7 @@
         </div><br>
          <section class="gallery">
              <img src="/images/celebrating.jpg" height="300px" alt="">
-             <img src="/images/abiturient.jpg" height="300px" alt="">
+             <img src="/images/kryshtene2.jpg" height="300px" alt="">
              <img src="/images/krashtene.jpg" height="300px" alt="">
          </section>
     </section>
