--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -16,7 +16,7 @@
             <h1 class="anim">THE CHEF RESTAURANT</h1>
             <p class="anim">"След една хубава вечеря, човек може да прости на всеки, дори на собствените си роднини."
                 Оскар Уайлд</p>
-            <th:block sec:authorize="!isAuthenticated()">
+            <th:block >
 <!--                <a href="/reservations/all" class="btn">Your reservations</a>-->
             <a href="https://thechef-club.com/%d0%bc%d0%b5%d0%bd%d1%8e/" class="btn anim">Look our Menu</a>
             </br>
@@ -52,7 +52,7 @@
     <!-- Portfolio -->
     <section class="gallery">
         <img src="/images/1.jpg" width="150px" height="250px" alt="">
-        <img src="/images/cocktail3.jpg" width="150px" height="250px" alt="">
+        <img src="/images/cocktail5.jpg" width="150px" height="250px" alt="">
         <img src="/images/5.jpg" width="150px" height="250px" alt="">
     </section>
 </div>
