--- a/src/main/resources/templates/individual.html
+++ b/src/main/resources/templates/individual.html
@@ -24,7 +24,7 @@
         <section class="gallery">
             <img src="/images/menu1.jpg" height="250px" alt="">
             <img src="/images/dinner3.jpg" height="250px" alt="">
-            <img src="/images/chicken.jpg"  height="250px" alt="">
+            <img src="/images/dinner5.jpg"  height="250px" alt="">
         </section>
 
     </section>
