--- a/src/main/resources/templates/your-reservation.html
+++ b/src/main/resources/templates/your-reservation.html
@@ -53,7 +53,7 @@
                                   id="textContent"
                                   cols="30"
                                   rows="5"
-                                  class="form-control"
+                                  class="form-control-comment"
                                   style="background-color: white;"></textarea>
                         <small id="messageError" class="invalid-feedback">
                             Text comment should be at least 10 characters.
